--- a/resources/views/app/packages/index.edge
+++ b/resources/views/app/packages/index.edge
@@ -10,7 +10,10 @@ Projects
       <div class="card-body">
         <div class="d-flex align-items-center justify-content-between pb-4">
           <h4 class="card-title mb-0">Projects</h4>
-          <a href="{{ route('app.packages.choose') }}" class="btn btn-primary pull-right">New Project</a>
+          <a href="{{ route('app.packages.choose') }}" style="background:#169EB5"
+            class="btn btn-primary pull-right">
+            New Project
+          </a>
 
         </div>
         <div class="row">
@@ -29,18 +32,23 @@ Projects
                     <div class="d-flex justify-content-between">
                       <p class="text-mute d-flex d-md-block flex-column">
                         <a href="{{ route('app.packages.show', {id: package.id}) }}"
-                          class="btn btn-sm btn-{{ package.fullStatus.class }} mb-1 mb-md-0">
+                          class="btn btn-sm btn-{{ package.fullStatus.class }} mb-1 mb-md-0"
+                          style="background:{{package.fullStatus.background}}">
                             {{ package.fullStatus.label }}
                         </a>
-                        <a class="btn btn-sm btn-success" 
-                            href="{{ route('app.packages.view.update', {id: package.id}) }}">
-                            View Update
+                        <a class="btn btn-sm btn-success" style="background:#169EB5"
+                            href="{{ route('app.packages.view.update', {id: package.project.id}) }}">
+                            View Detail
                         </a>
                       </p>
                       <p class="text-muted">Payments: {{package.__meta__.payments_count}}</p>
                     </div>
                     <div class="progress progress-md">
-                    <div class="progress-bar bg-{{ package.fullStatus.class }}" style="width: {{ package.__meta__.payments_count / package.plan.duration * 100 }}%" role="progressbar" aria-valuenow="{{ package.percentage }}" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar bg-{{ package.fullStatus.class }}" 
+                        style="width: {{ package.__meta__.payments_count / package.plan.duration * 100 }}%" 
+                        role="progressbar" aria-valuenow="{{ package.percentage }}" 
+                        aria-valuemin="0" aria-valuemax="100">
+                      </div>
                     </div>
                 </div>
                 </div>
