--- a/resources/views/app/dashboard.edge
+++ b/resources/views/app/dashboard.edge
@@ -136,7 +136,7 @@
                                         src="{{project.feature_img?project.feature_img:'/assets/images/properties/'+($loop.index + 1)+'.jpg'}}" 
                                         alt="Card image cap">
                                     <span class="badge badge-{{ project.SoldStatusObj.class}}" 
-                                        style="position:absolute;top:50%;right:50%;transform: translateX(50%);">
+                                        style="position:absolute;top:0%;left:0%;">
                                         {{project.SoldStatusObj.label}}
                                     </span>
                                 </div>
