--- a/resources/views/includes/admin_navigation.edge
+++ b/resources/views/includes/admin_navigation.edge
@@ -84,6 +84,12 @@
   </a>
 </li>
 <li class="nk-menu-item">
+  <a href="{{ route('admin.visitations.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Visitations</span>
+  </a>
+</li>
+<li class="nk-menu-item">
   <a href="{{ route('admin.references.index') }}" class="nk-menu-link">
       <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
       <span class="nk-menu-text">References</span>
