--- a/resources/views/app/packages/index.edge
+++ b/resources/views/app/packages/index.edge
@@ -21,36 +21,36 @@ Projects
           <div class="col-xs-12 col-sm-6 col-md-6 grid-margin stretch-card card-tile ">
             {{--  <a href="{{ route('app.packages.show', {id: package.id}) }}">  --}}
                 <div class="card">
-                <div class="card-body">
-                    <a href="{{ route('app.packages.show', {id: package.id}) }}">
-                        <h5 class="m0">{{ package.project.flats }} - {{ package.project.name }}</h5>
-                        <div class="d-flex justify-content-between pb-2">
-                            <h6 class="m0 package-index-amount">{{{ moneyFormat(package.amount) }}}</h6>
-                            <i> {{{ moneyFormat(package.project.annum_return * package.amount / package.project.capital) }}}/annum</i>
-                        </div>
-                    </a>
-                    <div class="d-flex justify-content-between">
-                      <p class="text-mute d-flex d-md-block flex-column">
-                        <a href="{{ route('app.packages.show', {id: package.id}) }}"
-                          class="btn btn-sm btn-{{ package.fullStatus.class }} mb-1 mb-md-0"
-                          style="background:{{package.fullStatus.background}}">
-                            {{ package.fullStatus.label }}
-                        </a>
-                        <a class="btn btn-sm btn-success" style="background:#169EB5"
-                            href="{{ route('app.packages.view.update', {id: package.project.id}) }}">
-                            View Detail
-                        </a>
-                      </p>
-                      <p class="text-muted">Payments: {{package.__meta__.payments_count}}</p>
-                    </div>
-                    <div class="progress progress-md">
-                      <div class="progress-bar bg-{{ package.fullStatus.class }}" 
-                        style="width: {{ package.__meta__.payments_count / package.plan.duration * 100 }}%" 
-                        role="progressbar" aria-valuenow="{{ package.percentage }}" 
-                        aria-valuemin="0" aria-valuemax="100">
+                  <div class="card-body">
+                      <a href="{{ route('app.packages.show', {id: package.id}) }}">
+                          <h5 class="m0">{{ package.project.flats }} - {{ package.project.name }}</h5>
+                          <div class="d-flex justify-content-between pb-2">
+                              <h6 class="m0 package-index-amount">{{{ moneyFormat(package.amount) }}}</h6>
+                              <i> {{{ moneyFormat(package.project.annum_return * package.amount / package.project.capital) }}}/annum</i>
+                          </div>
+                      </a>
+                      <div class="d-flex justify-content-between">
+                        <p class="text-mute d-flex d-md-block flex-column">
+                          <a href="{{ route('app.packages.show', {id: package.id}) }}"
+                            class="btn btn-sm btn-{{ package.fullStatus.class }} mb-1 mb-md-0"
+                            style="background:{{package.fullStatus.background}}">
+                              {{ package.fullStatus.label }}
+                          </a>
+                          <a class="btn btn-sm btn-success" style="background:#169EB5"
+                              href="{{ route('app.packages.view.update', {id: package.project.id}) }}">
+                              View Details
+                          </a>
+                        </p>
+                        <p class="text-muted">Payments: {{package.__meta__.payments_count}}</p>
                       </div>
-                    </div>
-                </div>
+                      <div class="progress progress-md">
+                        <div class="progress-bar bg-{{ package.fullStatus.class }}" 
+                          style="width: {{ package.__meta__.payments_count / package.plan.duration * 100 }}%" 
+                          role="progressbar" aria-valuenow="{{ package.percentage }}" 
+                          aria-valuemin="0" aria-valuemax="100">
+                        </div>
+                      </div>
+                  </div>
                 </div>
             {{--  </a>  --}}
           </div>
