mr ligali has crashed the site

--- a/resources/views/guest/contact.edge
+++ b/resources/views/guest/contact.edge
@@ -1,6 +1,6 @@
 @layout('templates.index')
 @section('title')
-  Contact Us
+  Contact Us | Property Investment
 @endsection
 @section('content')
 
@@ -19,18 +19,19 @@
       <div class="col-md-3 pb-5">
         <h5 class="text-success"> <b>Helplines</b> </h5>
         <h6>Our phone lines will be on <br> from 8:30am to 4pm, Mondays <br> to Fridays</h6>
-        <p class="my-3"> <b>+234 909 999 9830</b> </p>
-        <h6>support@landcrowdy.com.ng</h6>
+        <p class="my-3"> <b>+234 (0) 807 753 5390</b> </p>
+        <h6>support@landcrowdy.ng</h6>
       </div>
       <div class="col-md-3 pb-5">
         <h5 class="text-success"> <b>Email Address</b> </h5>
         <h6>All official correspondence and <br> enquiries should be forwared to</h6>
-        <p class="my-3"> <b>info@landcrowdy.com.ng</b> </p>
+        <p class="my-3"> <b>info@landcrowdy.ng</b> </p>
         <h4 class="text-success">Connect with us</h4>
-        <a href="#"><i class="fa fa-facebook fa-2x  mx-1 text-dark"></i></a>
-        <a href="#"><i class="fa fa-twitter fa-2x mx-1 text-dark"></i></a>
-        <a href="#"><i class="fa fa-instagram fa-2x  mx-1 text-dark"></i></a>
-        <a href="#"><i class="fa fa-linkedin fa-2x  mx-1 text-dark"></i></a>
+        <a href="https://www.facebook.com/landcrowdy" target="blank"><i class="fa fa-facebook fa-2x  mx-1 text-dark"></i></a>
+        <a href="https://twitter.com/landcrowdy" target="blank"><i class="fa fa-twitter fa-2x mx-1 text-dark"></i></a>
+        <a href="https://instagram.com/landcrowdy" target="blank"><i class="fa fa-instagram fa-2x  mx-1 text-dark"></i></a>
+        <a href="https://www.youtube.com/channel/UC_-dJh9ghvUuv4crwOZfbuQ" target="blank"><i class="fa fa-youtube fa-2x  mx-1 text-dark"></i></a>
+        <a href="https://www.linkedin.com/groups/4365825/" target="blank"><i class="fa fa-linkedin fa-2x  mx-1 text-dark"></i></a>
       </div>
       <div class="col-md-6">
         <!--Section: Contact v.2-->
