--- a/resources/views/guest/faq.edge
+++ b/resources/views/guest/faq.edge
@@ -1,17 +1,17 @@
 @layout('templates.index')
 @section('title')
-  FAQ
+	FAQ | Property Investment
 @endsection
 @section('content')
 	<!-- Header Section ends -->
 		<!-- FAQ Section starts -->
 	<section class="aboutus" id="about">
-		<div class="container">
+		<div class="container my-3">
 				<!-- Section title start -->
 			<div class="row">
 				<div class="col-md-12">
-					<div class="section-title">
-						 <h2>Frequently Asked Questions</h2>
+					<div class="section-title text-center">
+						 <h3><b>Frequently Asked Questions</b></h3>
 					</div>
 				</div>
 				<!-- Section title end -->
