--- a/resources/views/guest/index.edge
+++ b/resources/views/guest/index.edge
@@ -1,6 +1,6 @@
 @layout('templates.index')
 @section('title')
-  Home
+Nigeria's #1 Digital Property Platform
 @endsection
 @section('content')
 
@@ -32,7 +32,7 @@
   <!--/.Carousel Wrapper-->
 
   <!--MileStones-->
-  <div class="container-fluid mile">
+  <div class="container-fluid mile d-none d-lg-block">
     <div class="row text text-center">
 			@each(counter in counters)
       <div class="col-md-3 col-sm-6 border-right">
@@ -248,7 +248,7 @@
         </div>
       </div>
       <div class="col-md-12 text-center mt-5">
-        <a class="btn tnav4 waves-effect text-white " href="/" role="button"><b>Any Further Questions?</b></a>
+        <a class="btn tnav4 waves-effect text-white " href="/faq" role="button"><b>Any Further Questions?</b></a>
       </div>
     </div>
   </div>
