--- a/resources/views/guest/company.edge
+++ b/resources/views/guest/company.edge
@@ -1,11 +1,11 @@
 @layout('templates.index')
 @section('title')
-  Our Company
+  About Us | Property Investment
 @endsection 
 @section('content')
 
   <!--HEADER-->
-  <div class="container-fluid pt-4 company"></div>
+  <div class="container-fluid pt-4 company d-none d-lg-block"></div>
   <!--/HEADER-->
   <div class="container my-5">
     <div class="row">
@@ -16,20 +16,20 @@
       <div class="col-md-12 text-justify">
         <h3 class="tsc"><b>Who We Are</b></h3> <hr>
         <h5>LandCrowdy is an application that is digitalizing the Nigerian housing industry by allowing more Nigerians
-          participate in the subsector through their investments. It allows individual earn more money outside their
+          participate in the subsector through their sponsorship. It allows individual earn more money outside their
           paid employment while creating jobs and providing finance for building contractors, artisans and realtors. The
-          individuals can choose any plan of their choice on our platform to invest by making payments on our payment
+          individuals can choose any plan of their choice on our platform to sponsor by making payments on our payment
           platform provided by the app.</h5> <br> <br>
         <h3 class="tsc text-right"><b>What Inspired Us!</b></h3> <hr>
         <h5 >Imagine a society where no one has to be homeless and everyone gets to have a roof over their heads and beds to return to after a busy day? <br> <br>
           Sounds surreal? Well, at Landcrowdy, we believe it is very possible, and already, we are making this dream a reality! <br> <br>
-          By empowering building contractors, artisans and realtors, we create an enabling environment for individuals to find affordable but top quality homes. All this is through our platform which serves as a meeting ground for potential home owners like you who get connected to assets within your desired range of budget and invest accordingly. <br> <br>
-          You might wonder, how does this exactly work? Well, it’s simple. We are backed by a group of investors (of which you can choose to become one). These investors make provisions for highly experienced contractors to erect quality properties and then through our platform, you get to make your choice of whichever property or asset suits your taste. <br> <br>
-          In the end, our investors, contractors and you benefit while everyone goes home with smiles on their faces. <br> <br>
+          By empowering building contractors, artisans and realtors, we create an enabling environment for individuals to find affordable but top quality homes. All this is through our platform which serves as a meeting ground for potential home owners like you who get connected to assets within your desired range of budget and sponsor accordingly. <br> <br>
+          You might wonder, how does this exactly work? Well, it’s simple. We are backed by a group of sponsors (of which you can choose to become one). These sponsorors make provisions for highly experienced contractors to erect quality properties and then through our platform, you get to make your choice of whichever property or asset suits your taste. <br> <br>
+          In the end, our sponsors, contractors and you benefit while everyone goes home with smiles on their faces. <br> <br>
           With very flexible packages and plans, you can become a proud asset owner in no time! And what is even more amazing is that you do not necessarily need to have any prior knowledge on real estate! It’s simple, straightforward and even mobile friendly, thanks to our mobile app! <br> <br>
           So when next you hear someone say to you that your dream of moving into your new home would soon become a reality, I trust that you can smile with understanding, knowing that LandCrowdy has your back on this! <br> <br>
           
-          Visit landcrowdy.com.ng to get started and select from any of our flexible packages that suits your perfectly as we begin the countdown to your owning your own property! <br> <br>
+          Visit landcrowdy.ng to get started and select from any of our flexible packages that suits you perfectly as we begin the countdown to you owning your own property! <br> <br>
           </h5>
       </div>
     </div>
@@ -61,7 +61,7 @@
         <div class="card-body">
 
           <!--Title-->
-          <h4 class="card-title">Our Team</h4>
+          <h5 class="card-title"><b>Our Team</b></h5>
           <!--Text-->
           <p class="card-text">These are individuals with astonishing diversity of skills and experiences, bringing their unique talents to LandCrowdy every day.</p>
           <a href="team.html"><button class="btn btn-md tnav2" type="button"><b>Read more</b></button></a>
@@ -85,9 +85,9 @@
         <div class="card-body">
 
           <!--Title-->
-          <h4 class="card-title">Our Process</h4>
+          <h5 class="card-title"><b>Our Process</b></h5>
           <!--Text-->
-          <p class="card-text">With our innocative approach to real estate and development, we work together to help solve the problem of shelter while providing dividends to investors.</p>
+          <p class="card-text">With our innovative approach to real estate and development, we work together to help solve the problem of shelter while providing dividends to sponsors.</p>
           <a href="#"><button class="btn btn-md tnav2" type="button"><b>Read more</b></button></a>
 
         </div>
@@ -110,10 +110,10 @@
         <div class="card-body">
 
           <!--Title-->
-          <h4 class="card-title">Our Properties</h4>
+          <h5 class="card-title"><b>Our Properties</b></h5>
           <!--Text-->
-          <p class="card-text">Our affordable properties are thoughtfully designed/carefully managed.  We currently manage 50 units of housing in 4 diverse neighborhoods in Lagos.</p>
-          <a href="#"><button class="btn btn-md tnav2" type="button"><b>Read more</b></button></a>
+          <p class="card-text">Our affordable properties are thoughtfully designed and carefully managed.  We currently manage 50 units of housing in 4 diverse neighborhoods in Lagos.</p>
+          <a href="property"><button class="btn btn-md tnav2" type="button"><b>Read more</b></button></a>
 
         </div>
 
@@ -135,7 +135,7 @@
         <div class="card-body">
 
           <!--Title-->
-          <h4 class="card-title">Media & Awards</h4>
+          <h5 class="card-title"><b>Media & Awards</b></h5>
           <!--Text-->
           <p class="card-text">We've had several publications on both print and online media of our innovative approach to property development and also recognized for several awards</p>
           <a href="#"><button class="btn btn-md tnav2" type="button"><b>Read more</b></button></a>
@@ -149,7 +149,7 @@
   <!-- Card deck -->
 
   <!--MileStones-->
-  <div class="container-fluid bg-mile">
+  <div class="container-fluid bg-mile d-none d-lg-block">
     <div class="row text text-center">
       <div class="col-md-3 border-right">
         <h5> <i class="fa fa-building-o fa-3x text-white" aria-hidden="true"></i> <span class="">
@@ -157,15 +157,15 @@
       </div>
       <div class="col-md-3 border-right">
         <h5> <i class="fa fa-users fa-3x text-white" aria-hidden="true"></i> <span class="">
-          </span><br> <span class="text-white">50 Subscribers</span> </h5>
+          </span><br> <span class="text-white">50 Sponsors</span> </h5>
       </div>
       <div class="col-md-3 border-right">
         <h5> <i class="fa fa-globe fa-3x  text-white" aria-hidden="true"></i> <span class="">
-          </span><br> <span class="text-white"> 3 Countries</span> </h5>
+          </span><br> <span class="text-white"> 3 Communities</span> </h5>
       </div>
       <div class="col-md-3 ">
         <h5> <i class="fa fa-space-shuttle fa-3x  text-white" aria-hidden="true"></i> <span class="">
-          </span><br> <span class="text-white">Founded 2019</span> </h5>
+          </span><br> <span class="text-white">Founded 2020</span> </h5>
       </div>
     </div>
   </div>
@@ -186,10 +186,9 @@
           <!-- Card 1-->
           <div class="card mb-4 why">
             <div class="card-body why">
-              <h6><img src="image/icons/vision.png" alt="" class="img-fluid text-center " width="50"> <b>We've A
+              <h6><img src="/assets/images/icons/vision.png" alt="" class="img-fluid text-center " width="50"> <b>We've A
                   Vision</b></h6>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Ut enim ad minim
-                veniam</p>
+              <p class="card-text">Our vision is to be the leading provider of affordable digitalized homes in Africa.</p>
               <i class="fa fa-arrow-circle-right fa-2x" aria-hidden="true"></i>
             </div>
           </div>
@@ -199,7 +198,7 @@
           <!-- Card 1-->
           <div class="card mb-4 why">
             <div class="card-body why">
-              <h6><img src="image/icons/mission.png" alt="" class="img-fluid text-center" width="50"> <b>We've
+              <h6><img src="/assets/images/icons/mission.png" alt="" class="img-fluid text-center" width="50"> <b>We've
                   A Mission</b></h6>
               <p class="card-text">Our mission is to end the problem of shelter in Nigeria, one building at a time</p>
               <i class="fa fa-arrow-circle-right fa-2x" aria-hidden="true"></i>
@@ -210,7 +209,7 @@
           <!-- Card 3-->
           <div class="card mb-4 why">
             <div class="card-body why">
-              <h6><img src="image/icons/value.png" alt="" class="img-fluid text-center " width="50"> <b>We've Core
+              <h6><img src="/assets/images/icons/value.png" alt="" class="img-fluid text-center " width="50"> <b>We've Core
                   Values
                 </b></h6>
               <ul>
