--- a/resources/views/guest/teams.edge
+++ b/resources/views/guest/teams.edge
@@ -1,6 +1,6 @@
 @layout('templates.index')
 @section('title')
-  Home
+  Our Team | Property Investment
 @endsection
 @section('content')
 
@@ -25,18 +25,6 @@
       </div>
       <h4 class="font-weight-bold text-white mt-3">Eseovwe Emakunu</h4>
       <h6 class=" text-white mb-2"><strong>Communcations</strong></h6>
-      <!-- Facebook-->
-      <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-fb">
-        <i class="fa fa-twitter text-white"></i>
-      </a>
-      <!--Dribbble -->
-      <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-dribbble">
-        <i class="fa fa-facebook-f text-white"></i>
-      </a>
-      <!-- Twitter -->
-      <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-tw">
-        <i class="fa fa-instagram text-white"></i>
-      </a>
     </div>
     <!-- Grid column -->
 
@@ -47,18 +35,6 @@
       </div>
       <h4 class="font-weight-bold text-white mt-3">Oluwatosin Ligali</h4>
       <h6 class=" text-white mb-2"><strong>Founder & CEO</strong></h6>
-      <!--Email-->
-      <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-email">
-        <i class="fa fa-twitter text-white"></i>
-      </a>
-      <!-- Facebook-->
-      <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-fb">
-        <i class="fa fa-facebook-f text-white"></i>
-      </a>
-      <!-- GitHub-->
-      <a type="button" class="btn-floating btn-sm mx-1 mb-4 btn-git">
-        <i class="fa fa-instagram text-white"></i>
-      </a>
     </div>
     <div></div>
     <!-- Grid column -->
@@ -70,18 +46,6 @@
         </div>
         <h4 class="font-weight-bold text-white mt-3">Akingbade Ayobami</h4>
         <h6 class=" text-white mb-2"><strong>Technology</strong></h6>
-        <!-- Facebook-->
-        <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-fb">
-          <i class="fa fa-twitter text-white"></i>
-        </a>
-        <!--Dribbble -->
-        <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-dribbble">
-          <i class="fa fa-facebook-f text-white"></i>
-        </a>
-        <!-- Twitter -->
-        <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-tw">
-          <i class="fa fa-instagram text-white"></i>
-        </a>
       </div>
       <!-- Grid column -->
 
@@ -92,18 +56,6 @@
         </div>
         <h4 class="font-weight-bold text-white mt-3">Kelvin Muoneke</h4>
         <h6 class=" text-white mb-2"><strong>Marketing</strong></h6>
-        <!-- Facebook-->
-        <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-fb">
-          <i class="fa fa-twitter text-white"></i>
-        </a>
-        <!--Dribbble -->
-        <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-dribbble">
-          <i class="fa fa-facebook-f text-white"></i>
-        </a>
-        <!-- Twitter -->
-        <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-tw">
-          <i class="fa fa-instagram text-white"></i>
-        </a>
       </div>
       <!-- Grid column -->
 
@@ -114,18 +66,6 @@
         </div>
         <h4 class="font-weight-bold text-white mt-3">Victoria Edeme</h4>
         <h6 class=" text-white mb-2"><strong>Marketing</strong></h6>
-        <!-- Facebook-->
-        <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-fb">
-          <i class="fa fa-twitter text-white"></i>
-        </a>
-        <!--Dribbble -->
-        <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-dribbble">
-          <i class="fa fa-facebook-f text-white"></i>
-        </a>
-        <!-- Twitter -->
-        <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-tw">
-          <i class="fa fa-instagram text-white"></i>
-        </a>
       </div>
       <!-- Grid column -->
 
@@ -136,40 +76,16 @@
         </div>
         <h4 class="font-weight-bold text-white mt-3">Olamide Akin-Balogun</h4>
         <h6 class=" text-white mb-2"><strong>Finance</strong></h6>
-        <!-- Facebook-->
-        <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-fb">
-          <i class="fa fa-twitter text-white"></i>
-        </a>
-        <!--Dribbble -->
-        <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-dribbble">
-          <i class="fa fa-facebook-f text-white"></i>
-        </a>
-        <!-- Twitter -->
-        <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-tw">
-          <i class="fa fa-instagram text-white"></i>
-        </a>
       </div>
       <!-- Grid column -->
 
       <!-- Grid column -->
     <div class="col-md-4 mb-md-0 mb-5">
       <div class="avatar mt-3">
-        <img src="/assets/images/team/caleb.jpg" class="rounded z-depth-1-half" alt="Sample avatar">
+        <img src="/assets/images/team/kemi.jpg" class="rounded z-depth-1-half" alt="Sample avatar">
       </div>
-      <h4 class="font-weight-bold text-white mt-3">Caleb Adekunle</h4>
-      <h6 class=" text-white mb-2"><strong>Communications</strong></h6>
-      <!-- Facebook-->
-      <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-fb">
-        <i class="fa fa-twitter text-white"></i>
-      </a>
-      <!--Dribbble -->
-      <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-dribbble">
-        <i class="fa fa-facebook-f text-white"></i>
-      </a>
-      <!-- Twitter -->
-      <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-tw">
-        <i class="fa fa-instagram text-white"></i>
-      </a>
+      <h4 class="font-weight-bold text-white mt-3">Kemi Arowolo</h4>
+      <h6 class=" text-white mb-2"><strong>Marketing</strong></h6>
     </div>
     <!-- Grid column -->
 
@@ -180,18 +96,6 @@
       </div>
       <h4 class="font-weight-bold text-white mt-3">Idris Animashaun</h4>
       <h6 class=" text-white mb-2"><strong>Communications</strong></h6>
-      <!-- Facebook-->
-      <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-fb">
-        <i class="fa fa-twitter text-white"></i>
-      </a>
-      <!--Dribbble -->
-      <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-dribbble">
-        <i class="fa fa-facebook-f text-white"></i>
-      </a>
-      <!-- Twitter -->
-      <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-tw">
-        <i class="fa fa-instagram text-white"></i>
-      </a>
     </div>
     <!-- Grid column -->
 
@@ -202,18 +106,6 @@
       </div>
       <h4 class="font-weight-bold text-white mt-3">Caleb Adekunle</h4>
       <h6 class=" text-white mb-2"><strong>Designs</strong></h6>
-      <!-- Facebook-->
-      <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-fb">
-        <i class="fa fa-twitter text-white"></i>
-      </a>
-      <!--Dribbble -->
-      <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-dribbble">
-        <i class="fa fa-facebook-f text-white"></i>
-      </a>
-      <!-- Twitter -->
-      <a type="button" class="btn-floating btn-sm mx-1 mb-0 btn-tw">
-        <i class="fa fa-instagram text-white"></i>
-      </a>
     </div>
     <!-- Grid column -->
 
