--- a/resources/views/templates/index.edge
+++ b/resources/views/templates/index.edge
@@ -11,26 +11,26 @@
   <title>LandCrowdy -
       @!section('title')
   </title>
+  <meta name="description" content="LandCrowdy is Nigeria’s 1st Property tech company whose mission is to end the problem of shelter in Nigeria, one building at a time. We do this by creating an online platform for “everyday people'', to engage in the real estate value chain by building affordable homes in urban communities.">
+
 </head>
 
 <body>
   <!-- ==============Top nav==========  -->
-  <div class="container-fluid bg-light py-1 tnav">
+  <div class="container-fluid bg-light py-1 tnav d-none d-lg-block">
     <div class="row">
       <div class="col-md-4 px-5 py-2">
         <h6 class="small tnav1"><b>Nigeria's #1 Digital Property Platform</b> </h6>
       </div>
       <div class="col-md-4 text-center px-5 py-2">
-        <h6 class="small tnav1"><a class="helpline" href="tel:+2348077535390">Helpline: +2348077535390</a> </h6>
+        <h6 class="small tnav1"><a class="helpline" href="tel:+2348077535390">Helpline: +234 (0) 807 753 5390</a> </h6>
       </div>
       <div class="col-md-4 text-right d-none d-md-block">
-        <a href="https://www.facebook.com/landcrowdy"><i class="fa fa-facebook p-2 mx-2  text-white"></i></a>
-        <a href="https://twitter.com/landcrowdy"><i class="fa fa-twitter  p-2 mx-2 text-white"></i></a>
-        <a href="https://www.youtube.com/channel/UC_-dJh9ghvUuv4crwOZfbuQ"><i
-            class="fa fa-youtube  p-2 mx-2 text-white"></i></a>
-        <a href="#"><i class="fa fa-google-plus  p-2 mx-2 text-white"></i></a>
-        <a href="https://instagram.com/landcrowdy"><i class="fa fa-instagram  p-2 mx-2 text-white"></i></a>
-        <a href="#"><i class="fa fa-linkedin  p-2 mx-2 text-white"></i></a>
+        <a href="https://www.facebook.com/landcrowdy" target="blank"><i class="fa fa-facebook p-2 mx-2  text-white"></i></a>
+        <a href="https://twitter.com/landcrowdy" target="blank"><i class="fa fa-twitter  p-2 mx-2 text-white"></i></a>
+        <a href="https://www.youtube.com/channel/UC_-dJh9ghvUuv4crwOZfbuQ" target="blank"><i class="fa fa-youtube  p-2 mx-2 text-white"></i></a>
+        <a href="https://instagram.com/landcrowdy" target="blank"><i class="fa fa-instagram  p-2 mx-2 text-white"></i></a>
+        <a href="https://www.linkedin.com/groups/4365825/" target="blank"><i class="fa fa-linkedin  p-2 mx-2 text-white"></i></a>
       </div>
     </div>
   </div>
@@ -56,12 +56,16 @@
           </a>
           <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
             <a class="dropdown-item" href="{{ route('guest.company') }}">Our Company</a>
+            <a class="dropdown-item" href="{{ route('guest.testimonials') }}">Testimonials</a>
             <a class="dropdown-item" href="{{ route('guest.blog') }}">Blog</a>
             <a class="dropdown-item" href="{{ route('guest.teams') }}">Our Team</a>
           </div>
         </li>
         <li class="nav-item">
           <a class="nav-link mx-3" href="{{ route('guest.property') }}">Properties</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link mx-3" href="{{ route('guest.gallery') }}">Gallery</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle mx-3" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
@@ -86,48 +90,46 @@
     <div class="row mx-5 py-5">
       <div class="col-md-4">
         <a href="/"> <img src="/assets/images/logo12.png" alt=""> </a>
-        <h6 class="mt-3 text-white">We are Nigeria’s 1st Property tech company whose mission is to end the problem of
+        <h6 class="mt-3 text-white">We are Nigeria’s #1 Digital Property Platform whose mission is to end the problem of
           shelter in Nigeria, one building at a time.</h6>
-        <b></span><br> <span class="text-success">info@landcrowdy.com.ng</span> </h5>
-          </span><br> <span class="text-white">+234-807-7535-390</span> </h5></b><br><br>
-        <a href="https://www.facebook.com/landcrowdy"><i class="fa fa-facebook  mx-1 text-success"></i></a>
-        <a href="https://twitter.com/landcrowdy"><i class="fa fa-twitter mx-1 text-success"></i></a>
+          <b></span><br> <span class="text-success">info@landcrowdy.com.ng</span> </h5>
+          </span><br> <span class="text-white">+234-811-775-8384</span> </h5></b><br><br>
+        <a href="https://www.facebook.com/landcrowdy"><i class="fa fa-facebook  mx-2 text-success"></i></a>
+        <a href="https://twitter.com/landcrowdy"><i class="fa fa-twitter mx-2 text-success"></i></a>
         <a href="https://www.youtube.com/channel/UC_-dJh9ghvUuv4crwOZfbuQ"><i
             class="fa fa-youtube  mx-1 text-success"></i></a>
-        <a href="#"><i class="fa fa-google-plus  mx-1 text-success"></i></a>
-        <a href="https://instagram.com/landcrowdy"><i class="fa fa-instagram  mx-1 text-success"></i></a>
-        <a href="#"><i class="fa fa-linkedin  mx-1 text-success"></i></a>
-
+        <a href="https://instagram.com/landcrowdy"><i class="fa fa-instagram  mx-2 text-success"></i></a>
+        <a href="https://www.linkedin.com/groups/4365825/"><i class="fa fa-linkedin  mx-2 text-success"></i></a>
       </div>
       <div class="col-md-2">
         <h3 class="text-white">Useful Links </h3>
         <ul class="text-white">
-          <li class="pt-4">About Us</li>
-          <li class="pt-4">Contact Us</li>
-          <li class="pt-4">Services</li>
-          <li class="pt-4">News</li>
-          <li class="pt-4">Blog</li>
+          <li class="pt-4 "> <a href="company" class="text-light">About Us</a> </li>
+          <li class="pt-4"> <a href="contact" class="text-light">Contact Us</a> </li>
+          <li class="pt-4"> <a href="contact.html" class="text-light" >Services</a> </li>
+          <li class="pt-4"> <a href="terms" class="text-light">Terms of Use</a> </li>
+          <li class="pt-4"> <a href="blog" class="text-light">Blog</a> </li>
         </ul>
       </div>
 
       <div class="col-md-2 pt-5">
         <ul class="text-white">
-          <li class="pt-4">Privacy Policy</li>
-          <li class="pt-4">FAQ</li>
-          <li class="pt-4">Awards</li>
-          <li class="pt-4">Testimonials</li>
-          <li class="pt-4">Careers</li>
+          <li class="pt-4"> <a href="privacy" class="text-light">Privacy Policy</a> </li>
+          <li class="pt-4"> <a href="faq" class="text-light">FAQ</a> </li>
+          <li class="pt-4"> <a href="company.html" class="text-light">Awards</a> </li>
+          <li class="pt-4"> <a href="testimonials" class="text-light">Testimonials</a> </li>
+          <li class="pt-4"> <a href="company.html" class="text-light">Careers</a> </li>
         </ul>
       </div>
       <div class="col-md-4 text-white">
-        <h3>Join Our Newsletter</h3>
-        <p>Put your investing ideas into action with full range of properties.</p>
+        <h4><b>Join Our Newsletter</b></h4>
+        <p>Put your sponsorship ideas into action with our full range of properties.</p>
         <div class="save_newsletter_field">
           <input type="text" class="form-control" placeholder="Your email address...">
           <a href="#"><button class="btn btn-rounded text-white  my-1 waves-effect tnav2"
               type="submit"><b>Subscribe</b></button></a>
         </div>
-        <p>Download our mobile app to invest on different properties and monitor your investment on the go.</p>
+        <p>Download our mobile app to sponsor a property and monitor your projects on the go.</p>
         <a href="#"><img src="/assets/images/gplay.png" alt="" class="img-fluid  " width="120"></a>
         <a href="#"><img src="/assets/images/appstore.png" alt="" class="img-fluid  mx-2" width="124"></a>
       </div>
