--- a/resources/views/templates/index.edge
+++ b/resources/views/templates/index.edge
@@ -92,7 +92,7 @@
         <a href="/"> <img src="/assets/images/logo12.png" alt=""> </a>
         <h6 class="mt-3 text-white">We are Nigeria’s #1 Digital Property Platform whose mission is to end the problem of
           shelter in Nigeria, one building at a time.</h6>
-          <b></span><br> <span class="text-success">info@landcrowdy.com.ng</span> </h5>
+          <b></span><br> <span class="text-success">info@landcrowdy.ng</span> </h5>
           </span><br> <span class="text-white">+234-811-775-8384</span> </h5></b><br><br>
         <a href="https://www.facebook.com/landcrowdy"><i class="fa fa-facebook  mx-2 text-success"></i></a>
         <a href="https://twitter.com/landcrowdy"><i class="fa fa-twitter mx-2 text-success"></i></a>
